--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1606,6 +1606,18 @@ explicit references to the logics used.
   %\item{W3C/TR REC-rdf-sparql-query:2008}{SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
   \item{W3C/TR REC-rdf-schema:2014}{RDF Schema 1.1. W3C Recommendation, 25 February 2014.\\ \url{http://www.w3.org/TR/2014/REC-rdf-schema-20140225/}}
   \item{W3C/TR REC-rdf11-mt:2014}{RDF 1.1 Semantics.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/}}
+
+\todonote{Please have a look. I am pretty sure I did not fill them out correctly. Maria Hedblom}
+  \item{ODM ???}{Ontology Definition Metamodel, 2 September 2014. \\ url{http://www.omg.org/spec/ODM/1.1/}
+\item{MOF}{ Meta Object Facility} \\ \url{http://http://www.omg.org/mof/}
+\item{SMOF}{ Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}
+\item{XML}{Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI//}
+%\item{PRR}{Production Rule Representation, December 2009} \\ \url{ http://www.omg.org/spec/PRR/1.0// }
+\item{SBVR}{Semantics Of Business Vocabulary And Rules, November 2013} \\ \url{http://www.omg.org/spec/SBVR/}
+\item{DTV}{Date-Time Vocabulary, August 2013} \\ \url{http://www.omg.org/spec/DTV/1.0/}
+\item{RIF}{Rule Interchange Format, February 2013} \\ \url{http://www.w3.org/TR/rif-overview/}
+\item{SKOS}{ Simple Knowledge Organization System} \\ \url{ http://www.w3.org/2004/02/skos/}
+
 \end{enumerate}
 \ednote{more, see RFP}
 \ednote{introduce a separate reference scheme for normative references}
