--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1402,7 +1402,8 @@ syntaxes).
 A language translation  from language $L_1$ (based on institution
 $I_1$) to language $L_2$ (based on institution $I_2$) is conforming
 with DOL if it is based on a logic translation such the following
-diagram commutes:
+diagram commutes (i.e.\ following both possible paths from 
+$L_1$ to $I_2$ leads to the same result):
 $$\xymatrix{
 L_1 \ar[rrrrr]^{\Text{mapping between abstract syntaxes}} \ar[ddd]_{\Text{abstract syntax to institution}}
 &&&&& L_2 \ar[ddd]^{\Text{abstract syntax to institution}}\\
