--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1408,7 +1408,7 @@ L_1 \ar[rrrrr]^{\Text{mapping between abstract syntaxes}} \ar[ddd]_{\Text{abstra
 &&&&& L_2 \ar[ddd]^{\Text{abstract syntax to institution}}\\
 &&&&&\\
 &&&&&\\
-I_1\ar[rrrrr]^{\Text{institution (co)comorphism}} &&&&& I_2
+I_1\ar[rrrrr]^{\Text{institution (co)morphism}} &&&&& I_2
 }$$
 Language
 translations \may also translate the structuring language aspect, in
