--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -446,7 +446,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 %%%% Code which is used to produce minipages with border
 \usepackage{xparse}
-\n\newlength{\currentindent}
+\newlength{\currentindent}
 \newsavebox{\fminipagebox}
 \setlength{\currentindent}{\parindent}
 \NewDocumentEnvironment{fminipage}{m O{\fboxsep}}
