--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1609,7 +1609,7 @@ explicit references to the logics used.
   \item{W3C/TR REC-rdf11-mt:2014}{RDF 1.1 Semantics.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/}}
 
 \todonote{Please have a look. I am pretty sure I did not fill them out correctly. Maria Hedblom}
-  \item{ODM ???}{Ontology Definition Metamodel, 2 September 2014. \\ url{http://www.omg.org/spec/ODM/1.1/}
+  \item{ODM ???}{Ontology Definition Metamodel, 2 September 2014. \\ url{http://www.omg.org/spec/ODM/1.1/}}
 \item{MOF}{ Meta Object Facility} \\ \url{http://http://www.omg.org/mof/}
 \item{SMOF}{ Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}
 \item{XML}{Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI//}
