fixed floats lost problem

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1133,7 +1133,7 @@ A registry is discussed in clause \ref{c:conformance}.
 6.8(a)	& 
 Proposals covering a broader range of features and of use cases will be favored. As a minimum, proposals shall define conformance criteria for logical languages and translations, and their proposed metalanguage shall cover some metalogical relationships and shall be applicable to multiple logics.	&
 Conformance criteria for logical languages are defined in \ref{c:conform:logic} and those for translations in \ref{c:conform:translation}. DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
-DOL is applicable to multiple logics (see also 6.8(c) below).\ednote{Terry: Do you want to mention institutions here, presaging 6.5.4 ? and add 8.4 to the see list?}
+DOL is applicable to multiple logics (see also 6.8(c) below).
    \\ \hline
 %
 6.8(b)		&
@@ -1151,6 +1151,7 @@ with DOL.
 \end{longtable}
 \end{center}
 
+\ednote{Terry: Do you want to mention institutions in 6.8(a), presaging 6.5.4 ? and add 8.4 to the see list?}
 
 \section{Proof of Concept}
 Prototypical open source tools for DOL are already available, see
