--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7784,7 +7784,7 @@ network IRI = IRI, \ldots, IRI & Alignments \\\hline
 network IRI = IRI, \ldots, IRI & \\
 \qquad excluding IRI, \ldots, IRI -> IRI & \\\hline
 interpretation IRI : OMS to OMS = SymbolMap  & Mereology \\\hline
-interpretation IRI : OMS to OMS = \%cons SymbolMap  &  \\\hline
+interpretation IRI : OMS to OMS = \%cons SymbolMap  &  Engine\\\hline
 interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
 refinement IRI = OMS refined via SymbolMap to OMS & section~\ref{spec-1} \\\hline
 refinement IRI = OMS refined via translation IRI to OMS & \\\hline
@@ -7896,6 +7896,7 @@ end
 entailment Ent = SingleModel entails { . not ( A=>B ) }
 end
 
+
 library PropositionalMereology
 
 %% non-standard serialization built into Hets: 
@@ -7908,6 +7909,88 @@ ontology Taxonomy = %conssistent
   . S $\wedge$  T  $\longrightarrow$ $\bot$                  %% PD, S, T, AR are pairwise disjoint
   . T $\wedge$ AR $\longrightarrow$ $\bot$                                                                         %% and so on
 end
+\end{lstlisting}
+
+\sclause{Engine Diagnosis and Repair}\label{engine}
+
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,import},escapechar=@,mathescape]
+library Engine
+
+logic Propositional
+
+%% possible symptoms of an engine that is malfunctioning
+spec EngineSymptoms =
+  props black_exhaust, blue_exhaust, low_power, overheat,
+	ping, incorrect_timing,	low_compression
+end
+
+%% diagnosis derived from symptoms
+spec EngineDiagnosis = EngineSymptoms
+then %cons
+  props carbon_deposits,
+	clogged_filter,
+	clogged_radiator,
+	defective_carburetor,
+	worn_rings,
+	worn_seals
+  . overheat /\ not incorrect_timing => clogged_radiator
+                          %(diagnosis1)%
+  . ping /\ not incorrect_timing => carbon_deposits
+                          %(diagnosis2)%
+  . low_power /\ not incorrect_timing =>
+                worn_rings \/ defective_carburetor \/ clogged_filter
+                          %(diagnosis3)%
+  . black_exhaust => defective_carburetor \/ clogged_filter
+                          %(diagnosis4)%
+  . blue_exhaust => worn_rings \/ worn_seals
+                          %(diagnosis5)%
+  . low_compression <=> worn_rings
+                          %(diagnosis6)%
+end
+
+%% needed repair, derived from diagnosis
+spec EngineRepair = EngineDiagnosis
+then %cons
+  props replace_auxiliary,
+	repair_engine,
+	replace_engine
+  . worn_rings => replace_engine
+                          %(rule_replace_engine)%
+  . carbon_deposits \/ defective_carburetor \/ worn_seals =>
+                repair_engine
+                          %(rule_repair_engine)%
+  . clogged_filter \/ clogged_radiator => replace_auxiliary
+                          %(rule_replace_auxiliary)%
+end
+
+%% application to a specific case
+spec MyObservedSymptoms =
+  EngineSymptoms
+then
+  . overheat              %(symptom_overheat)%
+  . not incorrect_timing  %(symptom_not_incorrect_timing)%
+end
+
+spec MyRepair =
+  MyObservedSymptoms
+and 
+  EngineRepair
+end
+
+spec Repair =
+  prop repair
+  . repair
+end
+
+interpretation repair1 : Repair to MyRepair = %cons
+  repair |-> replace_engine end
+interpretation repair2 : Repair to MyRepair = %cons
+  repair |-> repair_engine end
+interpretation repair3 : Repair to MyRepair = %cons
+  repair |-> replace_auxiliary end 
+%% only repair3 is a valid interpretation. That is, 'replace_auxiliary'
+%% is the required action
+
 
 \end{lstlisting}
 
