--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1638,7 +1638,7 @@ For the purposes of this document, the following terms and definitions apply.
 \begin{definitions}
   \termdefinitionLight{Distributed Ontology, Model and Specification Language\synonym
   DOL}\index{\dolindex ! definition}{language for formalizing {libraries}\index{library} of \termref{OMS} and OMS networks\index{OMS network}, 
-  whose syntax and semantics are specified in this \IS}
+  whose syntax and semantics are specified in this \IS{}.}
 
 \begin{note}
  When viewed as an \termref{OMS language}, DOL has \termref{OMS} as its
@@ -1646,7 +1646,7 @@ non-logical symbols\index{non-logical symbol}, and OMS mappings\index{OMS mappin
 \end{note}
 
 \red{
-  \termdefinition{library}{collection of named \termref{OMS} and OMS networks\index{OMS network}, possibly written in different OMS languages\index{OMS language}, linked by named OMS mappings\index{OMS mapping}}
+  \termdefinition{library}{collection of named \termref{OMS} and OMS networks\index{OMS network}, possibly written in different OMS languages\index{OMS language}, linked by named OMS mappings\index{OMS mapping}.}
 }
 
 \end{definitions}
@@ -1671,14 +1671,14 @@ non-logical symbols\index{non-logical symbol}, and OMS mappings\index{OMS mappin
 
 
 \begin{definitions}
-\termdefinitionLight{basic OMS\index{basic OMS}\synonym flat OMS}{\termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}, which may be used as a building block for a larger \termref{OMS}}
+\termdefinitionLight{basic OMS\index{basic OMS}\synonym flat OMS}{\termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}, which may be used as a building block for a larger \termref{OMS}.}
   \begin{note}
     The sentences must use only those non-logical symbols that are present in the signature.
   \end{note}
 
 
 \termdefinition{OMS language}{language equipped with a formal, declarative, logic-based semantics,
-plus non-logical annotations\index{annotation}}
+plus non-logical annotations\index{annotation}.}
   \begin{note}
   An OMS language is used for the formal specification of \termref{OMS}.
   \end{note}
@@ -1688,7 +1688,7 @@ plus non-logical annotations\index{annotation}}
 
 
   \termdefinitionLight{\termref{non-logical symbol}\synonym OMS symbol\index{OMS symbol|see {OMS symbol}
- }}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}}
+ }}{atomic expression or syntactic constituent of an \termref{OMS} that requires an interpretation through a \termref{model}.}
 
   \begin{note}
   This differs from the notion of ``atomic sentence'': such sentences
@@ -1719,9 +1719,8 @@ plus non-logical annotations\index{annotation}}
 
 \termdefinitionLight{\termref{signature}\synonym vocabulary}\index{vocabulary|see {signature}}
 {set (or otherwise
-  structured entity) \ednote{\color{red}{What about `collection`? Structure is not important here.}} 
-of non-logical symbols\index{non-logical symbol} of an
-  \termref{OMS}}
+  structured entity)\ednote{\color{red}{What about `collection`? Structure is not important here.}} 
+of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
    \begin{note}
      The signature of a term is the set of all non-logical symbols occurring
      in the \termref{term}. The signature of an \termref{OMS language} is the
@@ -1730,7 +1729,9 @@ of non-logical symbols\index{non-logical symbol} of an
    \begin{note}
     The signature of an OMS is usually uniquely determined.
    \end{note}
-  \termdefinition{model}{semantic interpretation of all non-logical symbols\index{non-logical symbol} of a \termref{signature}}
+
+
+\termdefinition{model}{semantic interpretation of all non-logical symbols\index{non-logical symbol} of a \termref{signature}.}
   \begin{note}
     A model of an OMS is a model of the signature of the OMS
     that moreover satisfies all the axioms\index{axiom} of the OMS.
@@ -1742,9 +1743,10 @@ of non-logical symbols\index{non-logical symbol} of an
   \end{note}
 
   
-  \termdefinition{term}{syntactic expression either consisting of a single \termref{non-logical symbol} or recursively composed of other terms (a.k.a. its subterms)}
+\termdefinition{term}{syntactic expression either consisting of a single \termref{non-logical symbol} or recursively composed of other terms (a.k.a. its subterms).}
+
   
-  \termdefinition{sentence}{term that is either true or false in a given \termref{model}, i.e.\ which is assigned a truth value in this \termref{model}.\CLnote[type=fyi]{From Common Logic, I changed ``unit of logical text'' to ``term''.}}
+\termdefinition{sentence}{term that is either true or false in a given \termref{model}, i.e.\ which is assigned a truth value in this \termref{model}.\CLnote[type=fyi]{From Common Logic, I changed ``unit of logical text'' to ``term''.}}
   \begin{note}
 In a \termref{model}, on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
 other hand, a sentence can have several logical statuses: it can be an axiom, if postulated to be true;
@@ -1761,26 +1763,27 @@ other axioms and theorems; or have another of many possible statuses.
   \end{note}
 
 
-  \termdefinition{axiom}{\termref{sentence} postulated to be valid (i.e.\ true in every \termref{model})}
+\termdefinition{axiom}{\termref{sentence} that is  postulated to be valid (i.e.\ true in every \termref{model}).}
 
-  \termdefinition{theorem}{\termref{sentence} that has been proven from other \termref{axiom}s and \termref{theorem}s}
 
-  \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model}
+  \termdefinition{theorem}{\termref{sentence} that has been proven from other axioms \index{axiom} and theorems\index{theorem}.}
+
+  \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model.}
 
 \red{
-  \termdefinition{logical theory}{\termref{signature} equipped with a set of sentences\index{sentence} over the signature}
+  \termdefinition{logical theory}{\termref{signature} equipped with a set of sentences\index{sentence} over the signature.}
 }
 
 \red{
  \termdefinitionLight{\termref{entailment}\synonym specialization}{relation between two \termref{OMS}
-expressing that the second one is logically implied by the first one}
+expressing that the second one is logically implied by the first one.}
 \begin{note}
 The converse is generalization.
 \end{note}
 }
 
 \red{
-  \termdefinition{query language}{\termref{OMS language} specifically dedicated to queries\index{query}}
+  \termdefinition{query language}{\termref{OMS language} specifically dedicated to queries\index{query}.}
 \begin{example}
 SPARQL, Prolog
 \end{example}
@@ -1789,11 +1792,13 @@ There are also general purpose OMS languages, which can express both \termref{OM
 \end{note}
 }
 
-  \termdefinition{query}{\termref{sentence} containing query variables\index{query variable}
-   that can be instantiated by a \termref{substitution}}
+
+\termdefinition{query}{\termref{sentence} containing query variables\index{query variable}
+   that can be instantiated by a \termref{substitution}.}
+
 
 \termdefinition{query variable}{\termref{symbol} that will be used in a \termref{query} and a
-\termref{substitution}}
+\termref{substitution}.}
   \begin{note}
    From an abstract point of view, query variables are just symbols; 
    they are used in a way
@@ -1809,19 +1814,26 @@ There are also general purpose OMS languages, which can express both \termref{OM
   variables.
   \end{note}
 
-  \termdefinition{substitution}{\termref{OMS mapping} that maps query variables\index{query variable} of one \termref{OMS} to complex terms\index{term} of another OMS}
 
-  \termdefinition{answer substitution}{\termref{substitution} that, when applied to
+\termdefinition{substitution}{\termref{OMS mapping} that maps query variables\index{query variable} of one \termref{OMS} to complex terms\index{term} of another OMS.}
+
+
+
+\termdefinition{answer substitution}{\termref{substitution} that, when applied to
    a given \termref{query}, turns the latter into a logical consequence of a
-   given \termref{OMS}}
+   given \termref{OMS}.}
 \ednote{we have to revisit this once we design the abstract syntax of queries etc.}
-
 \end{definitions}  
 
-\sclause{Semantic Web}\label{c:terms-semantic-web}
 
+
+
+%%%%%%%%%%%%%%%%%%%%
+\sclause{Semantic Web}\label{c:terms-semantic-web}
+%%%%%%%%%%%%%%%%%%%%
 \begin{definitions}
-  \termdefinition{resource\subjectfield{web}}{something that can be globally identified}
+
+\termdefinition{resource\subjectfield{web}}{something that can be globally identified.}
   \begin{note}
     \nisref{IETF/RFC 3986:2005, Section 1.1} deliberately defines a resource as ``in a general sense \textelp{} whatever might be identified by \textins*{an IRI}''.  The original source refers to URIs, but DOL uses the compatible IRI standard \nisref{IETF/RFC 3987:2005} for identification.
   \end{note}
@@ -1834,9 +1846,13 @@ resources. Likewise, abstract concepts can be resources, such as the operators a
 mathematical equation, the types of a relationship (\eg, ``parent'' or ``employee''), or numeric 
 values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
   \end{example}
-  \termdefinition{element (of an OMS)}{any \termref{resource} in an \termref{OMS} (\eg a \termref{non-logical symbol}, a \termref{sentence}, a \termref{correspondence}, the \termref{OMS} itself, ...) or a named set of such \termref{resources}.}
+
+
+
+\termdefinition{element (of an OMS)}{any \termref{resource} in an \termref{OMS} (\eg a \termref{non-logical symbol}, a \termref{sentence}, a \termref{correspondence}, the \termref{OMS} itself, ...) or a named set of such \termref{resources}.}
   
-  \termdefinition{linked data}{structured data that is published on the Web in a machine-processable way, according to principles specified in \cite{BernersLee:LinkedData2006,BizerHeath09}}
+
+\termdefinition{linked data}{structured data that is published on the Web in a machine-processable way, according to principles specified in \cite{BernersLee:LinkedData2006,BizerHeath09}.}
   \begin{note}
     The linked data principles (adapted from \cite{BernersLee:LinkedData2006} and its paraphrase at \cite{Wikipedia:LinkedData2011}) are the following:
     \begin{enumerate}
@@ -1859,7 +1875,7 @@ values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
 \sclause{OMS Annotation and Documentation}\label{c:terms-annotation}
  
 \begin{definitions}
-  \termdefinition{annotation}{additional information without a logical semantics that is attached to an element\index{element (of an OMS)} of an \termref{OMS}}
+  \termdefinition{annotation}{additional information without a logical semantics that is attached to an element\index{element (of an OMS)} of an \termref{OMS}.}
   \begin{note}\label{note:annotation-rdf}
 Formally, an annotation is given as a $(\text{subject}, \text{predicate}, \text{object})$ triple as 
 defined by \nisref{SOURCE: W3C/TR REC-rdf11-concepts:2014, Section 3.1}.  The subject of an annotation 
@@ -1900,7 +1916,7 @@ not considered sentences of that OMS.
 %    The particular strength of literate programming is that one can generate both a reference manual and compilable/executable code (here: a formal OMS) from the same source, which facilitates maintenance.
 %  \end{note}
 
-  \termdefinition{OMS documentation}{set of all annotations\index{annotation} to an \termref{OMS}, plus any other documents and explanatory comments generated during the entire OMS building process}
+  \termdefinition{OMS documentation}{set of all annotations\index{annotation} to an \termref{OMS}, plus any other documents and explanatory comments generated during the entire OMS building process.}
   \begin{note}
     Adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}
   \end{note}
@@ -1910,43 +1926,52 @@ not considered sentences of that OMS.
 
 \red{
 \termdefinition{structured OMS}
-{\termref{OMS} that results from other (basic and structured) \termref{OMS} by \termref{import}, \termref{union}, \termref{combination}, \termref{renaming} or other structuring operations}
+{\termref{OMS} that results from other (basic and structured) \termref{OMS} by \termref{import}, \termref{union}, \termref{combination}, \termref{renaming} or other structuring operations.}
 
 
 \termdefinition{flattenable OMS}
-{OMS that can be seen, by purely syntactical means, to be logically 
-equivalent to a flat OMS}
+{OMS that can be seen, by purely syntactical means, to be logically  equivalent to a flat OMS.}
 \begin{note}
 More precisely, an OMS is flattenable if and only if it is either a basic OMS or it is an \termref{extension},
  \termref{union}, translation, \termref{module extraction}, \termref{approximation}, \termref{filtering},
   or reference of named OMS involving only flattenable OMS. 
 \end{note}
 
+
 \termdefinition{elusive OMS}
-{OMS that is not flattenable\index{flattenable OMS}}
+{OMS that is not flattenable\index{flattenable OMS}.}
 }
 
 
-  \termdefinition{subOMS}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are subsets of those present in a given larger \termref{OMS}}
 
-  \termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in a given smaller \termref{OMS}}
-   \termdefinition{extension mapping}{inclusion \termref{OMS mapping} between two
+\termdefinition{subOMS}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are subsets of those present in a given larger \termref{OMS}.}
+
+
+
+\termdefinition{extension}{\termref{OMS} whose sets of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} are supersets of those present in a given smaller \termref{OMS}.}
+
+
+
+\termdefinition{extension mapping}{inclusion \termref{OMS mapping} between two
    OMS where the sets of non-logical symbols\index{non-logical symbol} and
    sentences\index{sentence} of the second OMS are supersets of those
-   present in the first OMS} 
+   present in the first OMS.} 
 \begin{note} 
 The second OMS is said to extend the first, and is an extension of the
 first OMS.
 \end{note} 
 
-  \termdefinitionLight{consequence-theoretic conservative extension\index{conservative extension ! consequence-theoretic}}{extension that does
-   not add new theorems\index{theorem} (in terms of the unextended \termref{signature})}
+
+
+\termdefinitionLight{consequence-theoretic conservative extension\index{conservative extension ! consequence-theoretic}}{extension that does
+   not add new theorems\index{theorem} (in terms of the unextended \termref{signature}).}
   \begin{note}
     An extension $O_2$ of an OMS $O_1$ is a consequence-theoretic conservative extension, if all properties formulated in the signature of $O_1$ hold for $O_1$ whenever they hold for $O_2$.
   \end{note}
 
-  \termdefinitionLight{model-theoretic conservative extension\index{conservative extension ! model-theoretic}}{extension
-   that does not lead to a restriction of class of \termref{model}s of an \termref{OMS}}
+
+\termdefinitionLight{model-theoretic conservative extension\index{conservative extension ! model-theoretic}}{extension
+   that does not lead to a restriction of class of \termref{model}s of an \termref{OMS}.}
   \begin{note}
     An extension $O_2$ of an OMS $O_1$ is a model-theoretic conservative extension, if all properties formulated in the signature of $O_1$ hold for $O_1$ whenever they hold for $O_2$.
   \end{note}
@@ -1954,13 +1979,15 @@ first OMS.
    Any model-theoretic conservative extension is also a consequence-theoretic one.
   \end{note}
 
-  \termdefinitionLight{conservative extension\index{conservative extension ! (general)}}{consequence-theoretic or model-theoretic conservative extension\index{conservative extension ! model-theoretic}}
+
+\termdefinitionLight{conservative extension\index{conservative extension ! (general)}}{consequence-theoretic or model-theoretic conservative extension\index{conservative extension ! model-theoretic}.}
   \begin{note}
    If used without qualification, the consequence-theoretic version is meant.
   \end{note}
 
-  \termdefinition{monomorphic extension}{\termref{extension} whose newly introduced
-   non-logical symbols\index{non-logical symbol} are interpreted in a way unique up to isomorphism}
+
+\termdefinition{monomorphic extension}{\termref{extension} whose newly introduced
+   non-logical symbols\index{non-logical symbol} are interpreted in a way unique up to isomorphism.}
   \begin{note}
 An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a monomorphic extension, if each model of $O_1$ can be expanded to a model of $O_2$ that is unique up to isomorphism.
   \end{note}
@@ -1969,7 +1996,7 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a monomorphic extensio
   \end{note}
 
   \termdefinition{definitional extension}{\termref{extension} whose newly introduced
-   non-logical symbols\index{non-logical symbol} are interpreted in a unique way}
+   non-logical symbols\index{non-logical symbol} are interpreted in a unique way.}
   \begin{note}
 An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a definitional extension, if each model of $O_1$ can be uniquely expanded to a model of $O_2$.
   \end{note}
@@ -1981,7 +2008,7 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a definitional extensi
   \end{note}
 
   \termdefinition{weak definitional extension}{\termref{extension} whose newly introduced
-   non-logical symbols\index{non-logical symbol} can be interpreted in at most one way}
+   non-logical symbols\index{non-logical symbol} can be interpreted in at most one way.}
   \begin{note}
 An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional extension, if each model of $O_1$ can be expanded to at most one model of $O_2$.
   \end{note}
@@ -1990,7 +2017,7 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
    and model-theoretically conservative.
   \end{note}
 
-  \termdefinition{implied extension}{model-theoretic conservative extension\index{conservative extension ! model-theoretic} that does not introduce new non-logical symbols\index{non-logical symbol}}
+  \termdefinition{implied extension}{model-theoretic conservative extension\index{conservative extension ! model-theoretic} that does not introduce new non-logical symbols\index{non-logical symbol}.}
   \begin{note}
     A conservative extension $O_2$ of an \termref{OMS}
     $O_1$ is an implied extension, if and only if the signature of
@@ -2002,7 +2029,8 @@ An \termref{extension} $O_2$ of an \termref{OMS} $O_1$ is a weak definitional ex
     Each implied extension is also a definitional extension but not vice versa.
   \end{note}
 
-  \termdefinition{module}{\termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}}
+
+\termdefinition{module}{\termref{subOMS} that conservatively extends to conservative extension  the whole \termref{OMS}.}
 %\todonote[author=Christoph Lange]{a more formal definition, from \todonoteURL{http://iswc2011.semanticweb.org/fileadmin/iswc/Papers/PostersDemos/iswc11pd_submission_75.pdf}: Modules are subsets of
 %OMS that preserve all entailments over a set of terms $\Sigma$ called seed signature.  Modules based on syntactic locality are defined in Cuenca Grau, B., Horrocks, I., Kazakov, Y., Sattler, U.: Modular reuse of ontologies: Theory and practice. J. of Artif. Intell. Research 31, 273–318 (2008)}}
   \begin{note}
@@ -2011,15 +2039,16 @@ The conservative extension can be either model-theoretic or consequence-theoreti
   \end{note}
 \ednote{this is about coverage only. Should we also care about safety?}
 
-  \termdefinition{module extraction}{activity of obtaining from an \termref{OMS} concrete 
+
+\termdefinition{module extraction}{activity of obtaining from an \termref{OMS} concrete 
 modules\index{module} to be used for a particular purpose (\eg to contain a particular 
-sub-\termref{signature} of the original \termref{OMS})}
+sub-\termref{signature} of the original \termref{OMS}).}
   \begin{note}
-    Cited and slightly adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}
+    Cited and slightly adapted from \cite{SuarezFigueroaEtAl:OntologyGlossary2008}.
   \end{note}
   \begin{note}
 The goal of module extraction is ``decomposing an OMS into smaller, more manageable modules with
-appropriate dependencies'' \cite{DBLP:series/lncs/5445}
+appropriate dependencies'' \cite{DBLP:series/lncs/5445}.
   \end{note}
 
   \begin{example}
@@ -2032,19 +2061,21 @@ non-logical symbols.
 
 \termdefinition{approximant}{approximation (in the sense of a logically implied theory, possibly 
 after suitable translation)  of an OMS in a smaller \termref{signature} or
-\termref{OMS language}}
+\termref{OMS language}.}
+
+
 \termdefinition{maximum approximant}{
 best possible (in the sense of a maximum set of logical consequences)
-\termref{approximant} of an OMS in a smaller \termref{signature} or \termref{OMS language}}
+\termref{approximant} of an OMS in a smaller \termref{signature} or \termref{OMS language}.}
 \begin{note}
  Technically, a maximum approximant is a uniform interpolant, see \cite{DBLP:conf/ijcai/LutzW11}.
 \end{note}
 
 
-\termdefinition{closed world assumption}{presumption that what is not known to be true, is false}
+\termdefinition{closed world assumption}{presumption that what is not known to be true, is false.}
 
 \termdefinitionLight{\termref{minimization}\synonym circumscription\index{circumscription|see {minimization}}}
-{way of implementing the \termref{closed world assumption} by restricting the models\index{model} to those that are minimal}
+{way of implementing the \termref{closed world assumption} by restricting the models\index{model} to those that are minimal.}
   \begin{note}
     See \cite{circ1}, \cite{circ2}.
   \end{note}
