--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7790,7 +7790,7 @@ refinement IRI = OMS refined via SymbolMap to OMS & section~\ref{spec-1} \\\hlin
 refinement IRI = OMS refined via translation IRI to OMS & ATM \\\hline
 refinement IRI = IRI then IRI & section~\ref{spec-1} \\\hline
 refinement IRI = Network refined via IRI |-> IRI & \\
-\qquad using translation to Network & \\\hline
+\qquad using translation IRI to Network & \\\hline
 entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
 entailment IRI = OMSName in Network entails OMS & \\\hline
 entailment IRI = Network entails Network & \\\hline
