--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7820,13 +7820,12 @@ interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
 refinement IRI = OMS refined via SymbolMap to OMS & section~\ref{spec-1} \\\hline
 refinement IRI = OMS refined via translation IRI to OMS & ATM \\\hline
 refinement IRI = IRI then IRI & section~\ref{spec-1} \\\hline
-refinement IRI = Network refined via IRI |-> IRI & \\
-\qquad using translation IRI to Network & \\\hline
+refinement IRI = Network refined to Network & ATM \\\hline
 entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
-entailment IRI = OMSName in Network entails OMS & \\\hline
-entailment IRI = Network entails Network & \\\hline
+entailment IRI = OMSName in Network entails OMS & ATM\\\hline
+entailment IRI = Network entails Network & ATM\\\hline
 equivalence IRI : OMS \lessthan-\greaterthan\ OMS = OMS end  &  Algebra \\\hline
-equivalence IRI : Network \lessthan-\greaterthan\ Network = Network end  &  \\\hline
+%equivalence IRI : Network \lessthan-\greaterthan\ Network = Network end  &  \\\hline
 module IRI : OMS of OMS for Symbols  &  \\\hline
 module IRI \%ccons : OMS of OMS for Symbols  &  \\\hline
 alignment IRI : OMS to OMS end  &  \\\hline
@@ -8585,12 +8584,14 @@ our example there are no such activities).  If the interaction with
 the bank results in \uml{reenterPIN}, and the \emph{guard}
 \uml{trialsNum < 3} is true, the user can again enter a \uml{PIN}.
 
-We can now state the fact that the state machine of the
-\uml{atm}, shown in Fig.~\ref{fig:state-machine}, is a refinement of
-the protocol state machine in Fig.~\ref{fig:psm} as follows in DOL:
+We can now state the fact that the state machine of the \uml{atm},
+shown in Fig.~\ref{fig:state-machine}, is a refinement of the protocol
+state machine in Fig.~\ref{fig:psm} as follows in DOL, assuming that
+XMI representations of the relevant UML models have been stored at
+\url{http://www.example.org/uml/}, e.g.\ \url{http://www.example.org/uml/atm.xmi}:
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via},escapechar=@,mathescape]
-%prefix( :     <http://www.example.org/uml#>
+%prefix( :     <http://www.example.org/uml/>
          uml:   <http://www.uml.org/spec/UML/>
 %% descriptions of logics ...		 
          log:   <http://www.omg.org/spec/DOL/logics/>
@@ -8598,7 +8599,7 @@ library ATM
 logic log:uml
 
 refinement abstract_to_concrete_atm =
-  psm refined via psm2msb to 
+  psm refined via psm2atm to 
        {  atm with Idle |-> Idle, CardEntered |-> Idle, 
                    PINEntered |-> Idle, Verified |-> Idle, 
                    Verifying |-> Verifying 
@@ -8610,6 +8611,35 @@ The refinement uses an abstraction of the \uml{atm}, expressed by the
 translation via symbol map \texttt{Idle |-> Idle, CardEntered |-> Idle, PINEntered |-> Idle, Verified |-> Idle, Verifying |-> Verifying}, resulting in a two-state machine. Moreover, some detail of the \uml{atm} is hidden using
 \syntax{hide}. Then, the protocol state machine can be refined to
 the thus abstracted \uml{atm}.
+
+\ssclause{Networks of UML Models}
+
+The ATM example in Fig.~\ref{fig:psm} consists of five different
+models, which naturally form a network. We continue the library
+\uml{ATM} above, again assuming that XMI representations of the
+relevant UML models have been stored at
+\url{http://www.example.org/uml/},
+e.g.\ \url{http://www.example.org/uml/cd.xmi}:
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via,network,entailment,entails,refined},escapechar=@,mathescape]
+view cd2atm = cd to { atm hide along atm2cd} end
+view cd2psm = cd to { psm hide along psm2cd} end
+view cd2int = cd to { interaction hide along sqd2cd} end
+network ATM_network = cd, atm, psm, csd,
+                      cd2atm, cd2psm, abstract_to_concrete_atm
+entailment atm in ATM_network entails interaction
+network Some_refined_ATM_network = ...
+refinement r = ATM_network refined to Some_refined_ATM_network
+entailment e = Some_refined_ATM_network entails ATM_network
+\end{lstlisting}
+
+
+%% refinement IRI = Network refined via IRI |-> IRI & \\
+%% \qquad using translation IRI to Network & \\\hline
+%% entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
+%% entailment IRI = OMSName in Network entails OMS & \\\hline
+%% entailment IRI = Network entails Network & \\\hline
+%% equivalence IRI : OMS \lessthan-\greaterthan\ OMS = OMS end  &  Algebra \\\hline
+%% equivalence IRI : Network \lessthan-\greaterthan\ Network = Network end  &  \\\hline
 
 \sclause{Queries}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,query,select,where,in,substitution,result,for,along,library,spec,sort,pred,op},escapechar=@,mathescape]
