Address #116: Section headings capitalisation
I tried it for subsection headings and below. I adhered to the following
conventions:

  - don't touch level 1 (done by @fabianneuhaus),
  - capitalize level 2 and
  - only capitalize the first word of level 3,
  - make exceptions where appropriate for readability or when not sure
    how to capitalise (e.g. long titles).

The most notable exceptions are:

  - 7.1 - .10 (Use cases): everything up to ':' capitalised; reminder
    treated like being level 3,
  - 8.5 - .7: long titles; treated like level 3/not capitalised and
  - 10.2.3 & 11.2.1 - .5 & G.7.1 - .3 & J.1 - .6: left as is
                                                  (only harmonised 11.2.5).

As said above some exceptions stem from the fact that I did not know how
to properly capitalise long titles, e.g.:

  Connecting devices of differing complexity in an Ambient
  Assisted Living setting

  vs.

  Connecting Devices of differing Complexity in an Ambient
  Assisted Living Setting

  vs.

  Connecting Devices of Differing Complexity in an Ambient
  Assisted Living Setting

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1300,7 +1300,7 @@ standard.  The registry contents itself will not be normative; however, it is
 expected to become the basis for normative activities.
 
 
-\sclause{Conformance of an OMS language/a logic with DOL}\label{c:conform:logic}
+\sclause{Conformance of an OMS Language/a Logic with DOL}\label{c:conform:logic}
 
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: for an OMS language to conform with DOL,
@@ -1421,7 +1421,7 @@ symbol) in the source \should be attached to its translation in the
 target (if there are more than one sentences (resp.\ symbols)
 expressing the translation, to at least one of them).
 
-\sclause{Conformance of a serialization of an OMS language with DOL}\label{c:conform:serialization}
+\sclause{Conformance of a Serialization of an OMS Language with DOL}\label{c:conform:serialization}
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: The main reason for the following specifications is identifier injection. DOL is capable
 of assigning identifiers to entities (symbols, axioms, modules, etc.) inside fragments of OMS
@@ -1530,7 +1530,7 @@ CURIEs altogether.
 
 Any conforming serialization of an OMS language shall have a machine-processable description as detailed in \cref{c:conform:description}.
 
-\sclause{Machine-processable description of conforming languages, logics, and serializations}\label{c:conform:description}
+\sclause{Machine-processable Description of Conforming Languages, Logics, and Serializations}\label{c:conform:description}
 
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: When a parser processes a DOL OMS found somewhere, which refers to modules in OMS languages, or includes them verbatim, the parser needs to know what language to expect; further DOL-supporting software needs to know, e.g., what other DOL-conforming languages the module in the given OMS language can be translated to.  Therefore we require that all languages/logics/serializations that conform with DOL describe themselves in a machine-comprehensible way.
@@ -1539,7 +1539,7 @@ Any conforming serialization of an OMS language shall have a machine-processable
 For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization be retrievable by dereferencing this IRI, according to the linked data principles.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:lola}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
 
 
-\sclause{Conformance of a document with DOL}\label{c:conform:document}
+\sclause{Conformance of a Document with DOL}\label{c:conform:document}
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: for exchanging DOL documents with other users/tools, nothing that has a formal semantics
 must be left implicit.  One DOL tool may assume that by default any OMS fragments inside a DOL
@@ -1559,7 +1559,7 @@ However, details about aspects of an OMS that do not have a formal, logic-based 
 left implicit.  For example, a conforming document may omit explicit references to matching
 algorithms that have been employed in obtaining an alignment.
 
-\sclause{Conformance of an application with DOL}\label{c:conform:application}
+\sclause{Conformance of an Application with DOL}\label{c:conform:application}
 
 In practice, DOL-aware \emph{applications} may also deal with documents that are not conforming 
 with DOL according to the criteria established in \cref{c:conform:document}.  However, an 
@@ -2081,7 +2081,7 @@ best possible (in the sense of a maximum set of logical consequences)
     See \cite{circ1}, \cite{circ2}.
   \end{note}
 
-\sclause{Mappings Between OMS}
+\sclause{Mappings between OMS}
 
    \termdefinitionLight{\termref{OMS mapping}\synonym link\subjectfield{OMS}}{relationship between two \termref{OMS}}
   
@@ -2749,7 +2749,7 @@ between OMS as part of OMS networks in a semantically well-defined way. Thus, to
 %
 %These challenges can be illustrated by the following set of use cases:
 
-\section{Use case Onto-1: Interoperability between OWL and FOL ontologies}
+\section{Use Case Onto-1: Interoperability between OWL and FOL ontologies}
 
 In order to achieve interoperability, during ontology development it is often necessary to describe 
 concepts in a language more expressive than OWL.  Therefore, it is common practice to informally 
@@ -2886,7 +2886,7 @@ integration.
 
  
 
-\section{Use case Onto-4: Interoperability between closed-world data and open-world metadata}
+\section{Use Case Onto-4: Interoperability between closed-world data and open-world metadata}
 Data collection has become easier and much more widespread over the years. This data has to be 
 assigned a meaning somehow, which occurs traditionally in the  form of metadata annotations. For 
 instance, consider geographical datasets derived from satellite data and raw sensor readings. 
@@ -2925,7 +2925,7 @@ The Dublin Core to PROV ontology translation%
 SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
 DOL  not only supports the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology (= OMS network), but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
 
-\section{Use case Spec-1: Specification Refinements}\label{spec-1}
+\section{Use Case Spec-1: Specification refinements}\label{spec-1}
 Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
 a formal software and hardware development process is used in order to ensure the correct functioning of systems. Typically, a requirement specification is refined 
 into a design specification and then an implementation, often involving several intermediate steps (see, e.g. the V-model [V-model], although this does not require 
@@ -2999,7 +2999,7 @@ refinement R3''' = R1 then R2
 
 \end{lstlisting}
 
-\section{Use case Spec-2: Modularity of Specifications}\label{spec-2}
+\section{Use Case Spec-2: Modularity of specifications}\label{spec-2}
 In the context of use case Spec-1, often specifications become so large that it is necessary to structure them in a modular way, both for human readability, 
 maintainability, and for more efficient tool support. The lack of a standard for such modular structuring hinders interoperability among different development efforts 
 and the reuse of specifications.
@@ -3044,7 +3044,7 @@ then
 end
 \end{lstlisting}
 
-\section{Use case Model-1: Coherent semantics for multi-language models}
+\section{Use Case Model-1: Coherent semantics for multi-language models}
 \ednote{Isn't this one about ontologies,too?}
 	
 Often a single problem area within a given domain must be described using several formalisms, due to user community requirements, expressiveness, tool support 
@@ -3068,7 +3068,7 @@ With DOL, one can, e.g.,
 \end{itemize}
 Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g., that it maximally preserves the information. 
 
-\section{Use case Model-2: Consistency among UML diagrams of different types}
+\section{Use Case Model-2: Consistency among UML diagrams of different types}
 
 A typical UML model involves diagrams of different types. Such UML models may have intrinsic errors because diagrams of different types may specify conflicting 
 requirements. Typical questions that arise in this context are, e.g.,
@@ -3086,7 +3086,7 @@ consistency. Under some restrictions, the proof of semantic consistency can be (
 Once a formal semantics for the different diagram types has been chosen (see, e.g. \cite{knapp-mossakowski-roggenbach:corr:2014}), it is possible to use DOL to specify in which 
 sense the diagrams need to be consistent, and check this by suitable tools.
 
-\section{Use case Model-3: Refinements between UML diagrams of different types, and their reuse}
+\section{Use Case Model-3: Refinements between UML diagrams of different types, and their reuse}
 A problem is a lack of reusability of refinements: Consider a controller for an elevator, which is specified with a UML protocol state machine, enriched with UML 
 sequence diagrams and OCL constraints. Assume further that this model is not directly implemented, but first refined to a UML behavior state machine (which then 
 can be automatically or semi-automatically transformed into some implementation using standard UML tools). However, there is no standardized language to 
@@ -3219,7 +3219,7 @@ This clause is informative. Its purpose is to briefly describe the
 We give an overview of the most important and innovative language
 constructs of DOL. Details can be found in clause~\ref{c:abstract-syntax}.
 
-\section{DOL in a nutshell}
+\section{DOL in a Nutshell}
 
 As the usage scenarios in clause \ref{c:goal} illustrate, the use of multiple OMS may lead to lack 
  of interoperability. The goal of \DOL is to enable users to overcome these interoperability issues by providing a language for representing 
@@ -3311,7 +3311,7 @@ Since \DOL is a meta-language,  it \textit{inherits} the logical language aspect
 %
 
 
-\section{OMS languages}
+\section{OMS Languages}
 %DOL gives interoperability a formal grounding and makes heterogeneous OMS and OMS networks and services based on them amenable to checking of coherence (e.g. consistency, conservativity, intended consequences, and compliance).
  OMS languages are declarative languages for making ontological distinctions formally precise, for modeling a domain in an unambiguous way, or for expressing algebraic specifications of software.   OMS languages are distinguished by the following features:
 
@@ -3326,7 +3326,7 @@ Acknowledging the wide tool support that conforming established languages such a
 DOL's modularity and annotation constructs can either be embedded into existing OMS as non-disruptive annotations, or they can be provided as standoff markup, pointing to the OMS they talk about; DOL specifies a syntax and semantics for both variants. DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.\ednote{Till, is this standoff markup remark up to date?}
 
 
-\section{Semantic foundations of DOL}
+\section{Semantic Foundations of DOL}
 
 
 A large variety of OMS languages in use can be captured at an abstract level using the concept of 
@@ -3437,7 +3437,7 @@ The DOL serializations also supports the \termref{annotation} of existing OMS vi
 
 \clause{DOL Abstract Syntax}\label{c:abstract-syntax}
 
-\sclause{Abstract syntax categories}
+\sclause{Abstract Syntax Categories}
 
 DOL provides abstract syntax categories for
 \begin{itemize}
@@ -3501,7 +3501,7 @@ LibraryName              = IRI ;
 
 At the beginning of a library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs; see \cref{c:identifiers} for details.
 
-\sclause{OMS networks}\label{c:networks}
+\sclause{OMS Networks}\label{c:networks}
 \red{
 Inside a library, one can define OMS networks (\syntax{NetworkDefn}).
 A \syntax{NetworkDefn} names an
@@ -4038,7 +4038,7 @@ prefix maps, even if the serialization does not support prefix maps otherwise.
 
 \clause{DOL Text Serialization}\label{a:text-syntax}
 
-\sclause{Document type}
+\sclause{Document Type}
 
 \begin{description}
 \item[MIME type] \mimetype{application/dol+text}
@@ -4317,7 +4317,7 @@ In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match
 
 The character set for the DOL text serialization is the UTF-8 encoding of Unicode \nisref{ISO/IEC 10646}.  However, OMS can always be input in the Basic Latin subset, also known as US-ASCII.\footnote{In this case, IRIs will have to be mapped to URIs following section 3.1 of \nisref{IETF/RFC 3987:2005}.}  For enhanced readability of OMS, the DOL text serialization particularly supports the native Unicode glyphs that represent common mathematical operators.%\todonote[author=Christoph Lange,type=q-aut]{@Till: I took part of that from the CASL reference manual.  I don't think we want/need to specify more than that.  I wouldn't say anything about ``display formats of lexical symbols'', for example.}
 
-\ssclause{Key Words and Signs}\label{c:keywords}
+\ssclause{Key words and signs}\label{c:keywords}
 
 The lexical symbols of the DOL text serialization include various key words and signs that occur as terminal symbols in the context-free grammar in \aref{a:dol-text:concrete}.  Key words and signs that represent mathematical signs are displayed as such, when possible, and those signs that are available in the Unicode character set may also be used for input.
 
@@ -4517,7 +4517,7 @@ values for the semantics. Additionally, \emph{semantic rules} are
 presented, mapping the abstract syntax to some suitable semantic
 domain.
 
-\sclause{Theoretical foundations of the DOL semantics}
+\sclause{Theoretical Foundations of the DOL Semantics}
 
 We now specify the theoretical foundations of the semantics of DOL.
 The notions of \emph{institution} and institution 
@@ -4825,7 +4825,7 @@ a function $\oplus$ taking as argument a family of models compatible with a netw
 and returning its selected amalgamation.
 
 
-\sclause{Semantics of DOL language constructs}\label{c:direct-sematics}
+\sclause{Semantics of DOL Language Constructs}\label{c:direct-sematics}
 
 The semantics of DOL is based on a fixed (but in principle arbitrary) heterogeneous logical 
 environment.  The semantic domains are based on this heterogeneous logical environment. 
@@ -6251,7 +6251,7 @@ logic-specific way from the correspondences
 $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 \cite{OM2014} illustrates how this construction works in the case of OWL, in a way that can be generalized to other logics.
 
-\ssclause{Semantics of queries}
+\ssclause{Semantics of Queries}
 
  \semdom{sem(QueryRelatedDefn)}
 
@@ -6330,7 +6330,7 @@ $C_1,\ldots, C_n$ taking into account \syntax{AlignSem}.
 
 
 
-\sclause{OMS language translations}
+\sclause{OMS Language Translations}
 The concept of OMS language translation has been
 formalized as institution comorphism.
 
@@ -8316,7 +8316,7 @@ end
 
 \end{lstlisting}
 
-\sclause{Ontology modules}
+\sclause{Ontology Modules}
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,extract},escapechar=@,mathescape]
 library GalenModule
@@ -8533,7 +8533,7 @@ hide permutation, is_ordered
 
 
 
-\sclause{Model-driven development}
+\sclause{Model-driven Development}
 
 We present as a small example in model-deriven development using UML,
 taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
